syntax = "proto3";

package types;

option go_package = "github.com/vultisig/recipes/types";

// SchedulingCapability defines what scheduling patterns a plugin supports
message SchedulingCapability {
  // Whether this plugin supports scheduling at all
  bool supports_scheduling = 1;

  // Supported schedule frequencies
  repeated ScheduleFrequency supported_frequencies = 2;

  // Maximum number of scheduled executions allowed
  int32 max_scheduled_executions = 3;
}

// ScheduleFrequency defines supported scheduling frequencies
enum ScheduleFrequency {
  SCHEDULE_FREQUENCY_UNSPECIFIED = 0;

  // High frequency (DCA style)
  SCHEDULE_FREQUENCY_HOURLY = 1;
  SCHEDULE_FREQUENCY_DAILY = 2;

  // Medium frequency (regular payments)
  SCHEDULE_FREQUENCY_WEEKLY = 3;
  SCHEDULE_FREQUENCY_BIWEEKLY = 4;
  SCHEDULE_FREQUENCY_MONTHLY = 5;
}
